--- a/my_first_markdown.Rmd
+++ b/my_first_markdown.Rmd
@@ -12,7 +12,17 @@ knitr::opts_chunk$set(echo = TRUE)
 Download sleep study data
 ```{r}
 library(readr)
-sleep <- read_csv("https://vincentarelbundock.github.io/
-    Rdatasets/csv/lme4/sleepstudy.csv") # no spaces
+sleep <- read_csv("https://vincentarelbundock.github.io/Rdatasets/csv/lme4/sleepstudy.csv") # no spaces
 head(sleep)
 ```
+
+Plot the data by subject
+```{r}
+library(ggplot2)
+ggplot(sleep, aes(x = Days, y = Reaction)) +
+  geom_point() +
+  geom_smooth() +
+  scale_x_continuous(breaks = seq(0, 8, by = 2)) +
+  facet_wrap(~ Subject)
+```
+
